compiler/tests/liva/errors/w004_always_true.liva
// W004 fixture: always-true comparison
main() {
    let x = 5
    if x == x {
        print("always true")
    }
}
